--- a/hope140.yaml
+++ b/hope140.yaml
@@ -29,33 +29,30 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-custom_proxy_group=✈️ 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=✈️ 节点选择`select`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.(负载|均衡)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]✈️ 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]✈️ 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💻 奈飞视频`select`[]💿 奈飞节点`[]✈️ 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]✈️ 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🎮 Steam平台`select`[]DIRECT`[]🎲 游戏节点`[]✈️ 节点选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]✈️ 节点选择`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=⌨️ 微软服务`select`[]DIRECT`[]✈️ 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]✈️ 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🔍️ 谷歌服务`select`[]DIRECT`[]✈️ 节点选择`[]🚀 手动切换
-custom_proxy_group=🎵 网易音乐`select`(解锁|网易云|网易|音乐|节点)
-custom_proxy_group=🐟 漏网之鱼`select`[]✈️ 节点选择`[]♻️ 自动选择`[]🔮 负载均衡`[]DIRECT`[]🚀 手动切换
-custom_proxy_group=💿 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|UNLOCK)
-custom_proxy_group=🎲 游戏节点`select`(IPLC|IEPL|专线)
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]✈️ 节点选择`[]♻️ 自动选择
+custom_proxy_group=📲 电报消息`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💻 奈飞视频`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎮 Steam平台`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=⌨️ 微软服务`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔍️ 谷歌服务`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+;custom_proxy_group=🎵 网易音乐`select`(解锁|网易云|网易|音乐|节点)
+custom_proxy_group=🐟 漏网之鱼`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
+;custom_proxy_group=💿 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media|UNLOCK)
+;custom_proxy_group=🎲 游戏节点`select`(IPLC|IEPL|专线)
+;custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
+;custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
+;custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+;custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
+;custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|坡|狮城|SG|Singapore)
+;custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|韩|韓)
+custom_proxy_group=🎯 全球直连`select`[]✈️ 节点选择`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=🛑 隐私拦截`select`[]REJECT`[]DIRECT
 
 
