--- a/lhie1_dler.ini
+++ b/lhie1_dler.ini
@@ -11,6 +11,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surg
 ruleset=Proxies,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Proxy.list
 ruleset=Domestic,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Domestic.list
 ruleset=Apple,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Apple.list
+ruleset=Steam,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Steam.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
@@ -22,6 +23,7 @@ custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxies`(港|HK|台|TW)
 custom_proxy_group=GlobalTV`select`[]Proxies`[]DIRECT`.*
 custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT`.*
 custom_proxy_group=Spotify`select`[]Proxies`[]DIRECT`.*
+custom_proxy_group=Steam`select`[]Proxies`[]DIRECT
 custom_proxy_group=Speedtest`select`[]Proxies`[]DIRECT`[]Domestic`.*
 custom_proxy_group=Auto - UrlTest`url-test`.*`http://cp.cloudflare.com/generate_204`1800
 
