--- a/lhie1_dler.ini
+++ b/lhie1_dler.ini
@@ -9,6 +9,7 @@ ruleset=!!import:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac865
 ruleset=Speedtest,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Speedtest.list
 ruleset=DIRECT,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Special.list
 ruleset=Proxies,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Proxy.list
+ruleset=Proxies,https://raw.githubusercontent.com/tzy123-me/Clash/main/cnbeta.list
 ruleset=Domestic,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Domestic.list
 ruleset=Apple,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Apple.list
 ruleset=Steam,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Steam.list
