--- a/ShellClash.ini
+++ b/ShellClash.ini
@@ -29,16 +29,16 @@ custom_proxy_group=🇸🇬 新加坡节点`select`(新加坡|坡|狮城|[^A-Za-
 custom_proxy_group=🇦🇷 阿根廷节点`url-test`(阿根廷|[^A-Za-z]+AR[^A-Za-z]+|Argentina)
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|[^A-Za-z]+TR[^A-Za-z]+|Türkiye|Turkey)
 
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]📺 省流节点`[]💻 普通节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🍕 手动切换
-custom_proxy_group=🎞 NETFLIX`select`[]🎥 流媒体解锁`[]👍 高级节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 节点选择
-custom_proxy_group=🎥 DisneyP`select`[]🎥 流媒体解锁`[]👍 高级节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 节点选择
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]📺 省流节点`[]💻 普通节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换`[]DIRECT
+custom_proxy_group=🎞 NETFLIX`select`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 节点选择
+custom_proxy_group=🎥 DisneyP`select`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 节点选择
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换`[]DIRECT
 custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🍕 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🍕 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🍕 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]📺 省流节点`[]💻 普通节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🍕 手动切换
 
 enable_rule_generator=true
 overwrite_original_rules=true
