--- a/ShellClash.ini
+++ b/ShellClash.ini
@@ -8,7 +8,7 @@ ruleset=🤖 人工智能,https://raw.githubusercontent.com/juewuy/ShellClash/ma
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=🎮 外服游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Rockstar/Rockstar.list
-ruleset=🎮 Steam下载,https://cdn.jsdelivr.net/gh/Femoon/clash-rules/steam.yaml
+ruleset=🎮 Steam下载,https://raw.githubusercontent.com/tzy123-me/Clash/main/steam_direct.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
