--- a/ShellClash.ini
+++ b/ShellClash.ini
@@ -11,6 +11,7 @@ ruleset=🎮 外服游戏,https://raw.githubusercontent.com/tzy123-me/Clash/main
 ruleset=🎮 Steam下载,https://raw.githubusercontent.com/tzy123-me/Clash/main/steam_direct.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/tzy123-me/Clash/main/cnbeta.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
