--- a/lhie1.ini
+++ b/lhie1.ini
@@ -16,7 +16,7 @@ ruleset=!!import:https://gist.githubusercontent.com/tindy2013/1fa08640a9088ac865
 ruleset=Netease Music,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list
 ruleset=Netease Music,https://raw.githubusercontent.com/tindy2013/subconverter/master/base/rules/lhie1/Netease%20Music%20IP.list
 ruleset=Domestic,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Domestic.list
-ruleset=Special,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Special.list
+ruleset=Special,https://raw.githubusercontent.com/tzy123-me/Clash/main/Special.list
 ruleset=AI,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
 ruleset=SteamDirect,https://raw.githubusercontent.com/tzy123-me/Clash/main/steam_direct.list
 ruleset=SteamProxy,https://raw.githubusercontent.com/tzy123-me/Clash/main/game.list
