--- a/lhie1_dler.ini
+++ b/lhie1_dler.ini
@@ -27,7 +27,7 @@ ruleset=Bilibili,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Su
 ruleset=Bahamut,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
 ruleset=Apple,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Apple.list
 ruleset=Microsoft,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Microsoft.list
-ruleset=OpenAI,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/OpenAI.list
+ruleset=OpenAI,https://raw.githubusercontent.com/tzy123-me/Clash/main/OpenAI.list
 ruleset=Netflix,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list
 ruleset=Disney Plus,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Media/Disney%20Plus.list
 ruleset=Telegram,https://raw.githubusercontent.com/dler-io/Rules/master/Surge/Surge%203/Provider/Telegram.list
